<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">财大讲座</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="login">登 录</string>
    <string name="register">注册</string>
    <string name="account">学号</string>
    <string name="password">密码</string>
    <string name="comment">写留言</string>
    
    <string name="acc_note">请输入学号</string>
    <string name="pwd_note">请输入密码</string>
    <string name="pho_note">请输入你的手机号</string>
    <string name="eml_note">请输入常用邮箱</string>
    <string name="rrpwd_note">请再次输入密码</string>
    <string name="rpwa_note">4~16个字符</string>
    <string name="name_note">请输入你的姓名</string>
    
     <string name="user_login_sucess">用户：登录，欢迎光临！</string>
     <string name="login_sucess">登陆成功！</string>
     <string name="login_fail">登陆失败！请输入正确的用户名与密码！</string>
     
    <string name="account_empty">用户名为空，请重新输入！</string>
    <string name="pwd_empty">密码为空，请重新输入！</string>
 
    
    
</resources>
